# poc-wasmcloud

./: .gitignore  Cargo.toml  README.md  wadm.yaml
src/: lib.rs  models.rs  nodes.rs  utils.rs  workflow_runner.rs  workflow_service.rs
wit/: world.wit
